# 2025_LR_OOP_5

./: CMakeLists.txt  README.md
include/: allocator.h  list.h
src/: main.cpp
tests/: test_list.cpp
